Displayed business metrics from the database

--- a/root/public/dashboard.html
+++ b/root/public/dashboard.html
@@ -61,54 +61,24 @@
                     <div class="metric-label">
                         <p>No. of Washes</p>
                     </div>
-                    <form action="" method="get">
-                        <input class="data" type="number" value="10">
-                    </form>
+                    <div id="washes" class="metric-value"></div>
                 </div>
                 <div class="metric">
                     <div class="metric-label">
-                    <p>Earnings this week</p>
+                    <p>Number of Customers</p>
                     </div>
-                    <form action="" method="get">
-                        <input class="data" type="number" value="1000">
-                    </form>
+                    <div id="customers" class="metric-value"></div>
                 </div>
                 <div class="metric">
                     <div class="metric-label">
-                        <p>Total earnings</p>
+                        <p>Total Earnings</p>
                     </div>
-                    <form action="" method="get">
-                        <input class="data" type="number" value="Ksh. 100000">
-                    </form>
+                    <div id="earnings" class="metric-value"></div>
                 </div>
-            </div>
-            <div class="customers" id="entries">
-                <h2>Top Customers</h2>
-                <table>
-                    <tr>
-                        <th>No.</th>
-                        <th>Customer Name</th>
-                        <th>Total Washes</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Pauline Maina</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Pauline Maina</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Pauline Maina</td>
-                        <td>5</td>
-                    </tr>
-                </table>
             </div>
         </div>
     </div>
     <script src="/js/commonFunc.js"></script>
+    <script src="/js/dashboardFunc.js"></script>
 </body>
 </html>
