--- a/root/public/customers.html
+++ b/root/public/customers.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="nav-bar">
             <div class="logo">
-                <a href="/"><img src="/images/hero-image.png" alt="Logo"></a>
+                <a href="/"><img src="/images/logo-white.png" alt="Logo"></a>
             </div>
             <div class="search">
                 <form action="" method="get">
