--- a/root/public/dashboard.html
+++ b/root/public/dashboard.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="nav-bar">
             <div class="logo">
-                <a href="/"><img src="/images/hero-image.png" alt="Logo"></a>
+                <a href="/"><img src="/images/logo-white.png" alt="Logo"></a>
             </div>
             <div class="search">
                 <form action="" method="get">
@@ -59,13 +59,13 @@
             <div class="highlights">
                 <div class="metric">
                     <div class="metric-label">
-                        <p>No. of Washes</p>
+                        <p>Total Washes</p>
                     </div>
                     <div id="washes" class="metric-value"></div>
                 </div>
                 <div class="metric">
                     <div class="metric-label">
-                    <p>Number of Customers</p>
+                    <p>Total Customers</p>
                     </div>
                     <div id="customers" class="metric-value"></div>
                 </div>
