--- a/root/public/index.html
+++ b/root/public/index.html
@@ -9,14 +9,15 @@
 <body>
     <div class="container" id="home">
         <div class="nav-bar">
-            <div class="logo"></div>
+            <div class="logo">
+                <a href="/"><img src="/images/logo-white.png" alt="Logo"></a>
+            </div>
             <div class="menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#cta">Contact</a></li>
-                    <li><a href="/register">Sign Up</a></li>
                     <li><a href="/login">Login</a></li>
                 </ul>
             </div>
@@ -27,7 +28,7 @@
                     <p>Hello There!</p>
                     <h1>Optimize your carwash services with <span>ShineTrack</span></h1>
                     <p>Manage your car wash operations seamlessly with ShineTrack</p>
-                    <button class="hero-button">Get Started</button>
+                    <a href="/register"><button class="hero-button">Get Started</button></a>
                 </div>
                 <div class="hero-image">
                     <img src="/images/hero-image.png" alt="Hero image">
@@ -37,7 +38,10 @@
         <section class="about" id="about">
             <div class="about-info">
                 <h2>About us</h2>
-                <p class="about-text">areoipkefoihnv iiherfiheierf eirhfihr fidhfikjeroihh eiohtrhioq 4qi8qeijh4rfiooh fi4jojri fpojgtr0if0nf fop1eejrij reopkrqe023</p>
+                <p class="about-text">
+                    With ShineTrack, users can easily track transactions, manage employees, and monitor daily business performance. Our platform provides real-time insights, customer management tools, and financial tracking, all aimed at enhancing efficiency and helping businesses grow.
+                    Whether you're running a small carwash or a larger chain, ShineTrack offers the tools you need to stay organized and focused on delivering the best service to your customers.
+                </p>
             </div>
         </section>
         <section class="features-section" id="features">
@@ -45,29 +49,29 @@
             <div class="features">
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="/images/feature.jpg" alt="Feature icon">
+                        <img src="/images/transaction-tracking.jpg" alt="Feature icon">
                     </div>
                     <div class="feature-text">
-                        <h4 class="feature-title">Feature 1</h4>
-                        <p>About this feature</p>
+                        <h4 class="feature-title">Transaction Tracking</h4>
+                        <p>Effortlessly monitor all transactions, ensuring accurate financial records and real-time business insights.</p>
                     </div>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="/images/feature.jpg" alt="Feature icon">
+                        <img src="/images/customer-management.jpg" alt="Feature icon">
                     </div>
                     <div class="feature-text">
-                        <h4 class="feature-title">Feature 2</h4>
-                        <p>About this feature</p>
+                        <h4 class="feature-title">Customer Management</h4>
+                        <p>Manage customer details and vehicle information to provide a personalized and efficient service</p>
                     </div>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="/images/feature.jpg" alt="Feature icon">
+                        <img src="/images/employee-management.jpg" alt="Feature icon">
                     </div>
                     <div class="feature-text">
-                        <h4 class="feature-title">Feature 3</h4>
-                        <p>About this feature</p>
+                        <h4 class="feature-title">Employee Monitoring</h4>
+                        <p>Keep track of employee activities and performance to ensure smooth operations and accountability</p>
                     </div>
                 </div>
             </div>
